prod/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodebase-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nodebase.aws.ishankdev.me
      secretName: nodebase-tls
  rules:
    - host: nodebase.aws.ishankdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodebase
                port:
                  number: 80
